--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -88,7 +88,6 @@
       border-radius: 8px;
       cursor: grab;
       user-select: none;
-      z-index: 1;
     }
 
     .dropped-component.drop-target {
@@ -115,8 +114,7 @@
     }
 
     .dropped-component:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      border-color: #2196f3;
     }
 
     .dragging-preview {
